kubectl/feishin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feishin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feishin
  template:
    metadata:
      labels:
        app: feishin
    spec:
      containers:
        - name: feishin
          image: ghcr.io/jeffvli/feishin:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: feishin-service
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: feishin
  ports:
    - name: http
      port: 9180
      targetPort: 9180
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feishin-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - music.joeberry.org
  rules:
  - host: music.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feishin-service
            port:
              number: 9180         
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feishin-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: music.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feishin-service
            port:
              number: 9180
